# RAG-end2end

./: .env.example  .gitignore  README.md  branch.ipynb  chunk.ipynb  conditional.ipynb  config.py  data_generate.ipynb  e2e.ipynb  e2e.sh  eval.ipynb  eval.sh  eval_dev.ipynb  filter.py  gen_data.sh  hyde.py  hyde_or_multi.py  langgraph.ipynb  langgraph.json  local_server.py  multi_retriever.py  multi_step_query.py  parser.ipynb  prep.sh  pyproject.toml  rag-graph.ipynb  rag.py  rag_agent.py  rag_agent_elastic.py  rag_decom.py  rag_decom_feedback.py  rag_filter_elastic.py  rag_filter_feedback.py  rag_filter_pg.py  rag_filter_sql.py  rag_graph.py  rag_hyde.py  rag_hyde_or_multi.py  rag_multi_queries_human.py  rag_multi_query.py  (+11 more)
chat/: agent.py  backend.py  feedback.py  front.py  frontend.py  req.py
db/: elastic.ipynb  faiss.ipynb  pg.ipynb
db_query/: connect_vec.py  create_table.py  create_vec.py  drop_table.py  pg.ipynb
dev/: ragas.ipynb
dev/rag_pipeline/: data_generate.ipynb  eval.ipynb  retriver.ipynb
elastic-start-local/: start.sh
evaluators/: f1_score.py  llm_evaluator.py
graph/: bot_answer.py  chunker.py  corrector.py  gen_data.py  human_feedback.py  parser.py  reranker.py  summary.py
notebook/: chunk.ipynb  emb.ipynb  eval.ipynb  parser.ipynb  rag-graph.ipynb
open_webui/: function.py
pgvector-start-local/: docker-compose.yml
rag_adaptive/: rag_adaptive.ipynb  rag_adaptive.py
rag_basic/: README.md  rag.py  rag_agent.py  rag_self_correct.py
rag_feedback/: README.md  rag_decom_feedback.py  rag_hyde_or_multi_feedback.py  rag_single_or_decom_feedback.py
rag_filter/: README.md  rag_filter_elastic.py  rag_filter_pg.py
rag_hyde_or_multi/: README.md  rag_hyde.py  rag_hyde_or_multi.py  rag_multi_query.py
rag_single_or_decom/: README.md  rag_decom.py  rag_single_or_decom.py
reranker/: cohere.ipynb  cohere.py  cross_encoder.py  rrf.ipynb  rrf.py
retrivers/: kiwi_bm25.py
schemea/: schema.json
scripts/: bot_answer.py  chunk.py  correct_eval.py  data_generate.py  eval.py  fetch.py  human_feedback.py  parse.py  path.py  rerank.py  retrieve.py  retriver.py  summary_eval.py  synthetic_data.py  synthetic_data_multi_hop.py  synthetic_data_single.py
test/: test_conflict_matrix.py  test_flatten.py  test_rrf.py
utils/: embed_openai.py  utils.py
