[project]
name = "RAG-end-to-end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.3.4",
    "datasets>=4.3.0",
    "exifread>=3.5.1",
    "faiss-cpu>=1.12.0",
    "kiwipiepy>=0.21.0",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-core==0.3.79",
    "langchain-teddynote>=0.5.4",
    "langchain-text-splitters>=0.3.11",
    "langchain-upstage>=0.7.4",
    "langgraph>=1.0.1",
    "llama-index>=0.10.45.post1",
    "markdownify>=1.2.0",
    "matplotlib>=3.10.7",
    "openai>=2.7.1",
    "pdfplumber>=0.11.7",
    "pymupdf>=1.26.6",
    "requests>=2.32.5",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "mypy>=1.13.0",
    "python-dotenv>=1.2.1",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "fitz",
    "fitz.*",
    "markdownify",
    "markdownify.*",
    "langchain_teddynote",
    "langchain_teddynote.*",
    "pandas",
    "pandas.*",
]
ignore_missing_imports = true

